RESOLVED FIXED72718
[GTK] Downloads not started by WebView only fail for transport errors
https://bugs.webkit.org/show_bug.cgi?id=72718
Summary [GTK] Downloads not started by WebView only fail for transport errors
Carlos Garcia Campos
Reported 2011-11-18 05:33:17 PST
For example, downloading a file that doesn't exists finishes successfully. This doesn't affect downloads started by the web view, because the frame loader client fails and the download never starts.
Attachments
Patch (6.84 KB, patch)
2011-11-18 05:39 PST, Carlos Garcia Campos
mrobinson: review+
Carlos Garcia Campos
Comment 1 2011-11-18 05:39:07 PST
Carlos Garcia Campos
Comment 2 2011-11-18 06:46:15 PST
Note You need to log in before you can comment on or make changes to this bug.