[GTK] Downloads not started by WebView only fail for transport errors https://bugs.webkit.org/show_bug.cgi?id=72718

Reviewed by Martin Robinson.

Source/WebKit/gtk:

Abort the download with an error if the response contains an
error code. It adds a new test case to the download unit tests.

* tests/testdownload.c:
(notifyDownloadStatusCallback):
(serverCallback):
(test_webkit_download_not_found):
(main):
* webkit/webkitdownload.cpp:
(DownloadClient::didReceiveResponse): Check whether http status of
the response is an error code and emit error signal in such case.

Source/WebKit2:

* WebProcess/Downloads/soup/DownloadSoup.cpp:
(WebKit::DownloadClient::didReceiveResponse): Check if the http
status of the response is an error code and finish the download
with an error in such case.

Canonical link: https://commits.webkit.org/89268@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@100769 268f45cc-cd09-0410-ab3c-d52691b4dbfc